# nycmelee-scoreboard

./: .gitignore  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1720037722396-e4274e8d4742e.mjs
src/: App.tsx  enums.ts  index.tsx  types.d.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Button.tsx  CharacterIcon.tsx  ComboBox.tsx  CommandSearchBar.tsx  CommentatorInput.tsx  Layout.tsx  LowerThird.tsx  NameComboBox.tsx  NameSelect.tsx  NavItem.tsx  Navbar.tsx  PlayerContainer.tsx  RoundContainer.tsx  ScoreboardInfoContainer.tsx  TextBox.tsx  TopBar.tsx
src/components/Nav/: MainNav.tsx
src/components/Settings/: MeleePlayerDatabase.tsx  SettingsPage.tsx
src/components/ui/: pagination.tsx
src/context/: DatabaseContext.tsx  StateContext.tsx
src/pages/: Commentary.tsx  Home.tsx  Players.tsx  Settings.tsx  StreamQueue.tsx
